--- a/sim-two/src/components/frontPage/frontpage.css
+++ b/sim-two/src/components/frontPage/frontpage.css
@@ -1,4 +1,26 @@
-.test {
-    width: 100%;
-    height: 50%;
+.mainBox{
+    /* 22C-2 */
+height: 1000px;
+width: 60vw;
+background-color: white;
+display: flex;
+/* 27G */
+justify-content: center;
+/* 27C */
+align-items: center;
+/* 27D */
+flex-direction: column;
+/* 27F */
+}
+.logo {
+    margin-bottom: 200px; 
+    /* 24C */
+}
+
+.center {
+height: 100vh;
+width: 100vw;
+display: flex;
+justify-content: center;
+position: fixed;        
 }
